[tool.poetry]
name = "quickstruct"
version = "0.1.1"
description = "A small library to ease the creation, usage, serialization and deserialization of C structs."
authors = ["Binyamin Y Cohen <binyamincohen555@gmail.com>"]
repository = ""

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
